# PersonalAIAgent

./: .gitignore  Home.py  README.md  agent.py  agent_terminal.py  chat.py  client.py  functions.py  main.py  manager.py  manager_terminal.py  pyproject.toml  setup.sh
functions/: file_functions.py  subprocess_functions.py  url_functions.py
pages/: Agent_🕵️‍♂️.py  Manager_👨‍💼.py
unit_tests/: test_file_functions.py  test_subprocess_functions.py  test_url_functions.py
